Align CTA left. Fixes #105

--- a/assets/sass/partials/_main.scss
+++ b/assets/sass/partials/_main.scss
@@ -2778,6 +2778,7 @@ table {
 
 .widget_bigbutton {
   border: none !important;
+	float: left;
   margin: {
     right: 20px;
   }
